objects/Project_Task_Rollup__c.object
<CustomObject>
    <label>Project Task Rollup</label>
    <nameField>
        <displayFormat>PTR-{00000000}</displayFormat>
        <label>Project Task Rollup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <referenceTo>Time__c</referenceTo>
        <relationshipLabel>Project Task Rollups</relationshipLabel>
        <relationshipName>Project_Task_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planned_hrs__c</fullName>
        <label>Planned (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Project Task Rollups</relationshipLabel>
        <relationshipName>Project_Task_Rollups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>